placing loader on the center of the parent element

--- a/src/style.css
+++ b/src/style.css
@@ -333,6 +333,7 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
+    margin: auto;
     animation: spin 2s linear infinite;
   }
   
